# maxclique

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  py_maxclique.cpp  setup.py.in
cmake/: maxclique-config.cmake.in  pybind11.cmake.in
include/maxclique/: maxclique.h
src/: maxclique.cpp
test/: CMakeLists.txt  main.cpp  maxclique_test.cpp
